Issue 38 See https://github.com/danshannon/javastravav3api/issues/38