@@ -3,7 +3,7 @@ package javastrava.api.v3.service.impl.retrofit;
 import java.io.IOException;
 import java.util.StringTokenizer;
 
-import javastrava.config.Strava;
+import javastrava.config.StravaConfig;
 import lombok.NoArgsConstructor;
 import retrofit.client.Header;
 import retrofit.client.OkClient;
@@ -42,18 +42,18 @@ public class RetrofitClientResponseInterceptor extends OkClient {
 		Response response = super.execute(request);
 
 		for (Header header : response.getHeaders()) {
-			if (header.getName().equals(Strava.stringProperty("strava.rate-limit-usage-header-name"))) { //$NON-NLS-1$
+			if (header.getName().equals(StravaConfig.string("strava.rate-limit-usage-header-name"))) { //$NON-NLS-1$
 				String values = header.getValue();
 				StringTokenizer tokenizer = new StringTokenizer(values, ","); //$NON-NLS-1$
-				StravaServiceImpl.requestRate = new Integer(tokenizer.nextToken()).intValue();
-				StravaServiceImpl.requestRateDaily = new Integer(tokenizer.nextToken()).intValue();
+				StravaServiceImpl.requestRate = Integer.valueOf(tokenizer.nextToken()).intValue();
+				StravaServiceImpl.requestRateDaily = Integer.valueOf(tokenizer.nextToken()).intValue();
 				StravaServiceImpl.requestRatePercentage();
 			}
-			if (header.getName().equals(Strava.stringProperty("strava.rate-limit-limit-header-name"))) { //$NON-NLS-1$
+			if (header.getName().equals(StravaConfig.string("strava.rate-limit-limit-header-name"))) { //$NON-NLS-1$
 				String values = header.getValue();
 				StringTokenizer tokenizer = new StringTokenizer(values, ","); //$NON-NLS-1$
-				Strava.RATE_LIMIT = new Integer(tokenizer.nextToken()).intValue();
-				Strava.RATE_LIMIT_DAILY = new Integer(tokenizer.nextToken()).intValue();
+				StravaConfig.RATE_LIMIT = Integer.valueOf(tokenizer.nextToken()).intValue();
+				StravaConfig.RATE_LIMIT_DAILY = Integer.valueOf(tokenizer.nextToken()).intValue();
 				StravaServiceImpl.requestRateDailyPercentage();
 			}
 		}
